2003-05-16  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/sigwaitinfo.c (do_sigwaitinfo): Fold
	SI_TKILL code into SI_USER.
	* sysdeps/unix/sysv/linux/sigtimedwait.c (do_sigtimedwait): Likewise.

	* sysdeps/posix/sigpause.c (do_sigpause): Use sigdelset after all.

2003-05-15  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/powerpc/powerpc32/dl-machine.c (_dl_reloc_overflow):
	Remove sym argument, always use refsym.
	(__process_machine_rela): Adjust callers.
	* sysdeps/powerpc/powerpc64/dl-machine.c (_dl_reloc_overflow):
	Likewise.
	* sysdeps/powerpc/powerpc32/dl-machine.h (_dl_reloc_overflow):
	Adjust prototype.
	* sysdeps/powerpc/powerpc64/dl-machine.h (elf_machine_rela): Likewise.

2003-05-15  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/generic/dl-sysdep.c (_dl_show_auxv): Fix typo
	(DL_NEED_SYSINFO -> NEED_DL_SYSINFO).  If aux value is not known
	print numeric values.

2003-05-12  Thorsten Kukuk  <kukuk@suse.de>

	* inet/netinet/igmp.h: Sync with Linux Kernel 2.5.69 and *BSD.

2003-05-14  Andreas Schwab  <schwab@suse.de>

	* sysdeps/unix/sysv/linux/ia64/umount.c: New file.

2003-05-14  Jakub Jelinek  <jakub@redhat.com>

	* elf/rtld.c (dl_main): For LD_TRACE_PRELINKING print search scope
	even if no DT_NEEDED is present.

2003-05-13  David Mosberger  <davidm@hpl.hp.com>

	* sysdeps/unix/sysv/linux/ia64/setjmp.S: Fix the fix from
	2003-03-27: setjmp is NOT a leaf-routine (due to the call to
	__sigjmp_save) so we can't keep the saved unat value in a scratch
	register (r16).  Use loc2 instead.

2003-05-13  Ulrich Drepper  <drepper@redhat.com>

	* csu/Makefile: Do compile elf-init with PIC flag since in dynamic
	binaries it has to be relocatable.

	* sysdeps/unix/sysv/linux/waitpid.c: Use waitpid syscall is available.

2003-05-12  Steven Munroe  <sjmunroe@us.ibm.com>

	* sysdeps/powerpc/bits/atomic.h
	(__arch_compare_and_exchange_bool_8_rel): Define.
	(__arch_compare_and_exchange_bool_16_rel): Define.