@@ -1,5 +1,8 @@
 2003-05-16  Ulrich Drepper  <drepper@redhat.com>
 
+	* include/features.h (__USE_XOPEN2K): Define also for
+	_POSIX_C_SOURCE>=200112L.
+
 	* sysdeps/unix/sysv/linux/sigwaitinfo.c (do_sigwaitinfo): Fold
 	SI_TKILL code into SI_USER.
 	* sysdeps/unix/sysv/linux/sigtimedwait.c (do_sigtimedwait): Likewise.
